@@ -1,10 +1,12 @@
 #include "zone.h"
 
+
+#include <string.h>
+
 #include <stdlib.h>
 #include <math.h>
 #include "tools.h"
 
-#define MAX_RANGES 20
 #define MAX_CIRCLES 20
 
 typedef struct
@@ -17,11 +19,8 @@ typedef struct
 } Circle;
 
 struct Zone {
-    ZoneRangeCondition height_ranges[MAX_RANGES];
-    int height_ranges_count;
-
-    ZoneRangeCondition slope_ranges[MAX_RANGES];
-    int slope_ranges_count;
+    Curve* value_by_height;
+    Curve* value_by_slope;
 
     Circle circles_included[MAX_CIRCLES];
     int circles_included_count;
@@ -35,8 +34,10 @@ Zone* zoneCreate()
     Zone* result;
 
     result = (Zone*)malloc(sizeof(Zone));
-    result->height_ranges_count = 0;
-    result->slope_ranges_count = 0;
+    result->value_by_height = curveCreate();
+    curveSetDefault(result->value_by_height, 1.0);
+    result->value_by_slope = curveCreate();
+    curveSetDefault(result->value_by_slope, 1.0);
     result->circles_included_count = 0;
     result->circles_excluded_count = 0;
 
@@ -45,6 +46,8 @@ Zone* zoneCreate()
 
 void zoneDelete(Zone* zone)
 {
+    curveDelete(zone->value_by_height);
+    curveDelete(zone->value_by_slope);
     free(zone);
 }
 
@@ -52,25 +55,8 @@ void zoneSave(PackStream* stream, Zone* zone)
 {
     int i;
 
-    packWriteInt(stream, &zone->height_ranges_count);
-    for (i = 0; i < zone->height_ranges_count; i++)
-    {
-        packWriteDouble(stream, &zone->height_ranges[i].value);
-        packWriteDouble(stream, &zone->height_ranges[i].hardmin);
-        packWriteDouble(stream, &zone->height_ranges[i].softmin);
-        packWriteDouble(stream, &zone->height_ranges[i].softmax);
-        packWriteDouble(stream, &zone->height_ranges[i].hardmax);
-    }
-
-    packWriteInt(stream, &zone->slope_ranges_count);
-    for (i = 0; i < zone->slope_ranges_count; i++)
-    {
-        packWriteDouble(stream, &zone->slope_ranges[i].value);
-        packWriteDouble(stream, &zone->slope_ranges[i].hardmin);
-        packWriteDouble(stream, &zone->slope_ranges[i].softmin);
-        packWriteDouble(stream, &zone->slope_ranges[i].softmax);
-        packWriteDouble(stream, &zone->slope_ranges[i].hardmax);
-    }
+    curveSave(stream, zone->value_by_height);
+    curveSave(stream, zone->value_by_slope);
 
     packWriteInt(stream, &zone->circles_included_count);
     for (i = 0; i < zone->circles_included_count; i++)
@@ -97,25 +83,8 @@ void zoneLoad(PackStream* stream, Zone* zone)
 {
     int i;
 
-    packReadInt(stream, &zone->height_ranges_count);
-    for (i = 0; i < zone->height_ranges_count; i++)
-    {
-        packReadDouble(stream, &zone->height_ranges[i].value);
-        packReadDouble(stream, &zone->height_ranges[i].hardmin);
-        packReadDouble(stream, &zone->height_ranges[i].softmin);
-        packReadDouble(stream, &zone->height_ranges[i].softmax);
-        packReadDouble(stream, &zone->height_ranges[i].hardmax);
-    }
-
-    packReadInt(stream, &zone->slope_ranges_count);
-    for (i = 0; i < zone->slope_ranges_count; i++)
-    {
-        packReadDouble(stream, &zone->slope_ranges[i].value);
-        packReadDouble(stream, &zone->slope_ranges[i].hardmin);
-        packReadDouble(stream, &zone->slope_ranges[i].softmin);
-        packReadDouble(stream, &zone->slope_ranges[i].softmax);
-        packReadDouble(stream, &zone->slope_ranges[i].hardmax);
-    }
+    curveLoad(stream, zone->value_by_height);
+    curveLoad(stream, zone->value_by_slope);
 
     packReadInt(stream, &zone->circles_included_count);
     for (i = 0; i < zone->circles_included_count; i++)
@@ -140,7 +109,14 @@ void zoneLoad(PackStream* stream, Zone* zone)
 
 void zoneCopy(Zone* source, Zone* destination)
 {
-    *destination = *source;
+    curveCopy(source->value_by_height, destination->value_by_height);
+    curveCopy(source->value_by_slope, destination->value_by_slope);
+    
+    memcpy(destination->circles_included, source->circles_included, sizeof(Circle) * source->circles_included_count);
+    destination->circles_included_count = source->circles_included_count;
+    
+    memcpy(destination->circles_excluded, source->circles_excluded, sizeof(Circle) * source->circles_excluded_count);
+    destination->circles_excluded_count = source->circles_excluded_count;
 }
 
 void zoneIncludeCircleArea(Zone* zone, double value, double centerx, double centerz, double softradius, double hardradius)
@@ -158,149 +134,40 @@ void zoneExcludeCircleArea(Zone* zone, double centerx, double centerz, double so
     /* TODO */
 }
 
-int zoneAddHeightRange(Zone* zone)
+void zoneGetHeightCurve(Zone* zone, Curve* curve)
 {
-    if (zone->height_ranges_count < MAX_RANGES)
-    {
-        zone->height_ranges[zone->height_ranges_count].value = 0.0;
-        zone->height_ranges[zone->height_ranges_count].softmin = 0.0;
-        zone->height_ranges[zone->height_ranges_count].hardmin = 0.0;
-        zone->height_ranges[zone->height_ranges_count].hardmax = 0.0;
-        zone->height_ranges[zone->height_ranges_count].softmax = 0.0;
-        return zone->height_ranges_count++;
-    }
-    else
-    {
-        return -1;
-    }
+    curveCopy(zone->value_by_height, curve);
 }
 
-int zoneGetHeightRangeCount(Zone* zone)
+void zoneSetHeightCurve(Zone* zone, Curve* curve)
 {
-    return zone->height_ranges_count;
+    curveCopy(curve, zone->value_by_height);
 }
 
-int zoneGetHeightRange(Zone* zone, int position, ZoneRangeCondition* range)
+void zoneAddHeightRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax)
 {
-    if (position >= 0 && position < zone->height_ranges_count)
-    {
-        *range = zone->height_ranges[position];
-        return 1;
-    }
-    else
-    {
-        return 0;
-    }
+    curveQuickAddPoint(zone->value_by_height, hardmin, 0.0);
+    curveQuickAddPoint(zone->value_by_height, softmin, value);
+    curveQuickAddPoint(zone->value_by_height, softmax, value);
+    curveQuickAddPoint(zone->value_by_height, hardmax, 0.0);
 }
 
-int zoneSetHeightRange(Zone* zone, int position, ZoneRangeCondition* range)
+void zoneGetSlopeCurve(Zone* zone, Curve* curve)
 {
-    if (position >= 0 && position < zone->height_ranges_count)
-    {
-        zone->height_ranges[position] = *range;
-        return 1;
-    }
-    else
-    {
-        return 0;
-    }
+    curveCopy(zone->value_by_slope, curve);
 }
 
-int zoneAddHeightRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax)
+void zoneSetSlopeCurve(Zone* zone, Curve* curve)
 {
-    ZoneRangeCondition range = {value, hardmin, softmin, softmax, hardmax};
-    int position;
-    
-    position = zoneAddHeightRange(zone);
-    if (position >= 0)
-    {
-        zoneSetHeightRange(zone, position, &range);
-    }
-    return position;
+    curveCopy(curve, zone->value_by_slope);
 }
 
-int zoneAddSlopeRange(Zone* zone)
+void zoneAddSlopeRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax)
 {
-    if (zone->slope_ranges_count < MAX_RANGES)
-    {
-        zone->slope_ranges[zone->slope_ranges_count].value = 0.0;
-        zone->slope_ranges[zone->slope_ranges_count].softmin = 0.0;
-        zone->slope_ranges[zone->slope_ranges_count].hardmin = 0.0;
-        zone->slope_ranges[zone->slope_ranges_count].hardmax = 0.0;
-        zone->slope_ranges[zone->slope_ranges_count].softmax = 0.0;
-        return zone->slope_ranges_count++;
-    }
-    else
-    {
-        return -1;
-    }
-}
-
-int zoneGetSlopeRangeCount(Zone* zone)
-{
-    return zone->slope_ranges_count;
-}
-
-int zoneGetSlopeRange(Zone* zone, int position, ZoneRangeCondition* range)
-{
-    if (position >= 0 && position < zone->slope_ranges_count)
-    {
-        *range = zone->slope_ranges[position];
-        return 1;
-    }
-    else
-    {
-        return 0;
-    }
-}
-
-int zoneSetSlopeRange(Zone* zone, int position, ZoneRangeCondition* range)
-{
-    if (position >= 0 && position < zone->slope_ranges_count)
-    {
-        zone->slope_ranges[position] = *range;
-        return 1;
-    }
-    else
-    {
-        return 0;
-    }
-}
-
-int zoneAddSlopeRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax)
-{
-    ZoneRangeCondition range = {value, hardmin, softmin, softmax, hardmax};
-    int position;
-    
-    position = zoneAddSlopeRange(zone);
-    if (position >= 0)
-    {
-        zoneSetSlopeRange(zone, position, &range);
-    }
-    return position;
-}
-
-static inline double _getRangeInfluence(ZoneRangeCondition range, double position)
-{
-    if (position >= range.hardmin && position <= range.hardmax)
-    {
-        if (position < range.softmin)
-        {
-            return range.value * (position - range.hardmin) / (range.softmin - range.hardmin);
-        }
-        else if (position > range.softmax)
-        {
-            return range.value * (range.hardmax - position) / (range.hardmax - range.softmax);
-        }
-        else
-        {
-            return range.value;
-        }
-    }
-    else
-    {
-        return 0.0;
-    }
+    curveQuickAddPoint(zone->value_by_slope, hardmin, 0.0);
+    curveQuickAddPoint(zone->value_by_slope, softmin, value);
+    curveQuickAddPoint(zone->value_by_slope, softmax, value);
+    curveQuickAddPoint(zone->value_by_slope, hardmax, 0.0);
 }
 
 static inline double _getCircleInfluence(Circle circle, Vector3 position)
@@ -347,39 +214,8 @@ double zoneGetValue(Zone* zone, Vector3 location, Vector3 normal)
         value_circle = 1.0;
     }
 
-    if (zone->height_ranges_count > 0)
-    {
-        value_height = 0.0;
-        for (i = 0; i < zone->height_ranges_count; i++)
-        {
-            value = _getRangeInfluence(zone->height_ranges[i], location.y);
-            if (value > value_height)
-            {
-                value_height = value;
-            }
-        }
-    }
-    else
-    {
-        value_height = 1.0;
-    }
-
-    if (zone->slope_ranges_count > 0)
-    {
-        value_steepness = 0.0;
-        for (i = 0; i < zone->slope_ranges_count; i++)
-        {
-            value = _getRangeInfluence(zone->slope_ranges[i], (1.0 - normal.y));
-            if (value > value_steepness)
-            {
-                value_steepness = value;
-            }
-        }
-    }
-    else
-    {
-        value_steepness = 1.0;
-    }
+    value_height = curveGetValue(zone->value_by_height, location.y);
+    value_steepness = curveGetValue(zone->value_by_slope, (1.0 - normal.y));
 
     if (value_steepness < value_height)
     {
