@@ -2,6 +2,7 @@
 #define _PAYSAGES_ZONE_H_
 
 #include "shared/types.h"
+#include "curve.h"
 #include "pack.h"
 
 #ifdef __cplusplus
@@ -10,15 +11,6 @@ extern "C" {
 
 typedef struct Zone Zone;
 
-typedef struct
-{
-    double value;
-    double hardmin;
-    double softmin;
-    double softmax;
-    double hardmax;
-} ZoneRangeCondition;
-    
 Zone* zoneCreate();
 void zoneDelete(Zone* zone);
 void zoneSave(PackStream* stream, Zone* zone);
@@ -27,17 +19,13 @@ void zoneCopy(Zone* source, Zone* destination);
 void zoneIncludeCircleArea(Zone* zone, double value, double centerx, double centerz, double softradius, double hardradius);
 void zoneExcludeCircleArea(Zone* zone, double centerx, double centerz, double softradius, double hardradius);
 
-int zoneAddHeightRange(Zone* zone);
-int zoneGetHeightRangeCount(Zone* zone);
-int zoneGetHeightRange(Zone* zone, int position, ZoneRangeCondition* range);
-int zoneSetHeightRange(Zone* zone, int position, ZoneRangeCondition* range);
-int zoneAddHeightRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax);
+void zoneGetHeightCurve(Zone* zone, Curve* curve);
+void zoneSetHeightCurve(Zone* zone, Curve* curve);
+void zoneAddHeightRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax);
 
-int zoneAddSlopeRange(Zone* zone);
-int zoneGetSlopeRangeCount(Zone* zone);
-int zoneGetSlopeRange(Zone* zone, int position, ZoneRangeCondition* range);
-int zoneSetSlopeRange(Zone* zone, int position, ZoneRangeCondition* range);
-int zoneAddSlopeRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax);
+void zoneGetSlopeCurve(Zone* zone, Curve* curve);
+void zoneSetSlopeCurve(Zone* zone, Curve* curve);
+void zoneAddSlopeRangeQuick(Zone* zone, double value, double hardmin, double softmin, double softmax, double hardmax);
 
 double zoneGetValue(Zone* zone, Vector3 location, Vector3 normal);
 
